# MTMLDA-1

./: .gitignore  .pre-commit-config.yaml  README.md  convert.sh  doodling.ipynb  dummy_main.py  job_script.sh  main.py  mkdocs.yml  model.py  mtmc.py  mtmlda.py  multichain.py  multiprocessing_test.py  postprocessing.ipynb  postprocessing.py  pyproject.toml  requirements.txt  run.py  sampling.py  settings.py  singlechain.py  test.ipynb
application/: postprocessing.py  sampling_example.py  settings_example.py
applications/dummy/: dummy_settings.py
applications/example_01/: builder.py  component_setup.py  settings.py
applications/example_02/: builder.py  component_setup.py  settings.py
applications/example_03/: builder.py
applications/example_04/: settings.py
applications/seissol_sebastian/: builder.py  settings.py
applications/seissol_zihua/: component_setup.py  postprocessing.py  settings.py
components/: abstract_builder.py  builder.py  general_settings.py  posterior.py  prior.py  rng.py  settings.py
docs/: index.md
docs/api/: utilities.md
docs/api/components/: builder.md  posterior.md  prior.md
docs/api/core/: jobhandling.md  logging.md  mcmc.md  mltree.md  sampling.md
docs/api/run/: postprocessor.md  runner.md
docs/usage/: tutorial.md
dummy/: exploration.ipynb  model_server.py  settings.py
dummy_seissol/: dummy_postprocessing.py  dummy_pto.py  dummy_settings.py  sampling.py
example/: posterior_banana_umbridge.py  postprocessing_example.py
examples/: postprocessing.py  run.py  run_all_examples.py
examples/dummy_results/: builder.py  settings.py
examples/example_01/: builder.py  settings.py  simulation_model.py
examples/example_02/: builder.py  settings.py  simulation_model.py
examples/example_03/: builder.py  settings.py  simulation_model.py  visualization.ipynb
examples/example_04/: builder.py  settings.py
examples/example_05/: builder.py  settings.py  visualization.ipynb
model/: posterior_pto_wrapper.py
models/: loglikelihood_gauss.py  posterior_banana.py  posterior_banana_umbridge.py  posterior_gauss.py  posterior_gauss_umbridge.py  posterior_pto_wrapper.py  posterior_umbridge.py  pto_banana.py  pto_umbridge.py  pto_zihua.py
package/: pyproject.toml
postprocessing/: postprocessing.ipynb  postprocessing.py
proposals/: proposals.py
run/: multichain.py  multiprocessing_test.py  settings.py  singlechain.py  singlerun.py
run_examples/: multichain.py  settings.py  singlechain.py
run_seissol/: multichain.py  settings.py  singlechain.py
seissol/: postprocessing.py  pto_umbridge_dummy.py  sampling.py  settings.py  settings_seissol.py
seissol/data/: real_data_time.txt  simulation_results_space.txt  time_data.npz
seissol/sebastian/: builder.py  settings.py
seissol/zihua/: builder.py  settings.py
seissol/zihua_1D/: builder.py  settings.py
seissol/zihua_2D/: settings.py
seissol/zihua_4D/: builder.py  settings.py
seissol/zihua_4D/data/: convert_data.py  space_data.npz
src/mtmlda/: __init__.py  jobhandling.py  logging.py  markovtree.py  mcmc.py  mlmcmc.py  mltree.py  mtmlda.py  sampler.py  sampling.py  utilities.py
src/mtmlda/components/: __init__.py  abstract_builder.py  general_settings.py  posterior.py  prior.py
src/mtmlda/core/: __init__.py  jobhandling.py  logging.py  mcmc.py  mltree.py  sampling.py
src/mtmlda/depr/: convert.sh  doodling.ipynb  mtmc.py  mtmlda copy.py  mtmlda.py
src/mtmlda/run/: __init__.py  postprocessor.py  runner.py
utilities/: utilities.py
