# ====================================== General Configuration =====================================
[project]
name = "mtmlda"
version = "0.1.0"
description = "Markov Tree Multilevel Delayed Acceptance MCMC Library"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "Maximilian Kruse", email = "maximilian.kruse@kit.edu"},
    {name = "Linus Seelinger", email = "linus.seelinger@kit.edu"},
]

requires-python = ">=3.9"
dependencies = [
    "anytree>=2.12",
    "numpy>=1.26"
]

#---------------------------------------------------------------------------------------------------
[project.optional-dependencies]
model = [
    "umbridge>=1.2.4"
]
postprocessing = [
    "arviz>=0.17",
    "pydot>=2.0",
    "seaborn>=0.13",
    "xarray>=2024.3"
]
notebook = [
    "jupyter>=1.0",
    "pandas>=2.2"
]
style = [
    "ruff>=0.3",
    "black>=24.3",
    "mypy>=1.9",
]

#---------------------------------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"




# =============================================== Ruff =============================================
[tool.ruff]
line-length = 100
src = ["src"]
select = ["E", "F", "UP", "D",]
ignore = []
fixable = ["ALL"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

#---------------------------------------------------------------------------------------------------
[tool.ruff.pydocstyle]
convention = "google"


# =============================================== Black ============================================
[tool.black]
line-length = 100
