[project]
name = "mtmlda"
version = "1.0.0"
description = "Markov Tree Multilevel Delayed Acceptance MCMC Library"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "Maximilian Kruse", email = "maximilian.kruse@kit.edu"},
    {name = "Linus Seelinger", email = "linus.seelinger@kit.edu"},
]
requires-python = ">=3.12"
dependencies = [
    "anytree>=2.12.1",
    "numpy>=2.1.3",
]

[project.optional-dependencies]
model = [
    "umbridge>=1.2.4",
]
notebook = [
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
]
postprocessing = [
    "arviz>=0.20.0",
    "pydot>=3.0.3",
    "seaborn>=0.13.2",
    "xarray>=2024.11.0",
]
development = [
    "ruff>=0.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["EM101", "EM102", "TRY003", "COM812", "RET504", "S101", "PD008"]
pydocstyle.convention = "google"
