[project]
authors = [
    {name = "Maximilian Kruse", email = "maximilian.kruse@kit.edu"},
    {name = "Linus Seelinger", email = "linus.seelinger@kit.edu"},
]
maintainers = [{ name = "Maximilian Kruse", email = "maximilian.kruse@kit.edu" }]
name = "mtmlda"
description = "Markov Tree Multilevel Delayed Acceptance MCMC Library"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
license = {text = "MIT"}
keywords = ["multilevel-methods", "bayesian-inference", "markov-chain-monte-carlo"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: POSIX :: Linux",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
]
urls = { repository = "https://github.com/UQatKIT/mtmlda" }

# --------------------------------------------------------------------------------------------------
dependencies = [
    "anytree>=2.12.1",
    "numpy>=2.1.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.8.1",
]
docs = [
  "mkdocs-material>=9.5.49",
  "mkdocs-autorefs>=1.2.0",
  "mkdocstrings[python]>=0.27.0",
]
model = [
    "umbridge>=1.2.4",
]
notebook = [
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
]
postprocessing = [
    "arviz>=0.20.0",
    "pydot>=3.0.3",
    "seaborn>=0.13.2",
    "xarray>=2024.11.0",
]

# --------------------------------------------------------------------------------------------------
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv]
environments = ["sys_platform == 'linux'"]
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } },
]

# --------------------------------------------------------------------------------------------------
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "EM101",
  "EM102",
  "FBT001",
  "FBT003",
  "F722",
  "F821",
  "ISC001",
  "PD008",
  "PD011",
  "PLR2004",
  "PT003",
  "RET504",
  "S101",
  "TRY003",
]
pydocstyle.convention = "google"
